[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/2D/world/mines/mine.png" type="Texture" id=1]
[ext_resource path="res://Scenes/2D/Mine/Mine.gd" type="Script" id=2]
[ext_resource path="res://Resources/Items/stone.tres" type="Resource" id=3]

[sub_resource type="Animation" id=4]
resource_name = "hover"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.34902, 0.94902, 0.415686, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "on_mine"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="BoxShape" id=6]
extents = Vector3( 1.27658, 1, 5.10965 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.292437, 0.806572, 1 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 12.0749, 8.78768 )

[node name="Mine" type="StaticBody2D"]
script = ExtResource( 2 )
reserves = [ ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ) ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/hover = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/on_mine = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="PlayerDetector"]
transform = Transform( 0.232296, 0, 0, 0, 0.0113762, 0, 0, 0, 0.0619902, 0.022161, -0.0554099, -0.0244418 )
shape = SubResource( 6 )

[node name="MouseDetector" type="Area2D" parent="."]
position = Vector2( 0, 0.0448971 )
scale = Vector2( 0.468521, 0.481358 )

[node name="CollisionShape" type="CollisionShape" parent="MouseDetector"]
transform = Transform( 0.759702, 0, 0, 0, 0.264001, 0, 0, 0, 0.223761, 0, 0, 0 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.07493, 3.395 )
shape = SubResource( 7 )

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="mouse_entered" from="MouseDetector" to="." method="_on_Detector_mouse_entered"]
[connection signal="mouse_exited" from="MouseDetector" to="." method="_on_Detector_mouse_exited"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
